# reader.waylonwalker.com

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  index.html  justfile  markata.toml  pyproject.toml  rss.xsl
_logs/info/: index.html
_logs/warning/: index.html
container/: Containerfile  justfile
reader_waylonwalker_com/plugins/: reader.py
static/: tui.py
templates/: base.html  base_head.html  card.html  content_base.html  dynamic_head.html  feed.html  nav.html  slim-card.html
